<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.admin.homework05.Detailsactivity"
    android:id="@+id/idmaxtemp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvcurrentlocation"
        android:id="@+id/tvcurrentlocation"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/idcurrentloc"
        android:layout_toStartOf="@+id/idcurrentloc"
        android:layout_marginRight="57dp"
        android:layout_marginEnd="57dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvcurrentlocationdisplay"
        android:id="@+id/idcurrentloc"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/idtemp"
        android:layout_toEndOf="@+id/idtemp" />

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/ivclouds"
        android:layout_marginTop="51dp"
        android:layout_below="@+id/tvcurrentlocation"
        android:layout_toRightOf="@+id/tvwinds"
        android:layout_toEndOf="@+id/tvwinds" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tvtemp"
        android:id="@+id/idtemp"
        android:layout_below="@+id/ivclouds"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvcondition"
        android:id="@+id/idcondition"
        android:layout_below="@+id/idtemp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/tvmaxtemp"
        android:id="@+id/textView"
        android:layout_above="@+id/idmintempdis"
        android:layout_toLeftOf="@+id/idcondition"
        android:layout_toStartOf="@+id/idcondition" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/tvmaxtempdisplay"
        android:id="@+id/idmaxtempdisplay"
        android:layout_below="@+id/idcondition"
        android:layout_alignRight="@+id/idcurrentloc"
        android:layout_alignEnd="@+id/idcurrentloc" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/tvmintemp"
        android:id="@+id/idmintemp"
        android:layout_alignTop="@+id/idmintempdis"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/tvmintempdisplay"
        android:id="@+id/idmintempdis"
        android:layout_below="@+id/idmaxtempdisplay"
        android:layout_alignRight="@+id/idcurrentloc"
        android:layout_alignEnd="@+id/idcurrentloc" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/tvfeelslike"
        android:id="@+id/tvfeelslike"
        android:layout_marginTop="320dp"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/tvfeelslikedisplay"
        android:id="@+id/idfeelslike"
        android:layout_alignTop="@+id/tvfeelslike"
        android:layout_toRightOf="@+id/tvcurrentlocation"
        android:layout_toEndOf="@+id/tvcurrentlocation" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/tvhumidity"
        android:id="@+id/tvhumidity"
        android:layout_marginTop="342dp"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/idmintemp"
        android:layout_alignEnd="@+id/idmintemp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/tvhumiditydisplay"
        android:id="@+id/idhumidity"
        android:layout_marginTop="342dp"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/idfeelslike"
        android:layout_alignStart="@+id/idfeelslike" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/tvdewpoint"
        android:id="@+id/tvdewpoint"
        android:layout_marginTop="362dp"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/tvhumidity"
        android:layout_alignEnd="@+id/tvhumidity" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/tvhumiditydisplay"
        android:id="@+id/iddewpoint"
        android:layout_marginTop="362dp"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/idhumidity"
        android:layout_alignStart="@+id/idhumidity" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/tvpressure"
        android:id="@+id/tvpressure"
        android:layout_marginTop="382dp"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/tvdewpoint"
        android:layout_alignEnd="@+id/tvdewpoint" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/tvpressuredisplay"
        android:id="@+id/idpressure"
        android:layout_marginTop="382dp"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/iddewpoint"
        android:layout_alignStart="@+id/iddewpoint"
        android:password="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/tvclouds"
        android:id="@+id/tvclouds"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/tvpressure"
        android:layout_alignStart="@+id/tvpressure"
        android:layout_marginTop="402dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/tvcloudsdisplay"
        android:id="@+id/idclouds"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/idpressure"
        android:layout_alignStart="@+id/idpressure"
        android:layout_marginTop="402dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/tvwinds"
        android:id="@+id/tvwinds"
        android:layout_marginTop="422dp"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/tvclouds"
        android:layout_alignStart="@+id/tvclouds" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/tvwindsdisplay"
        android:id="@+id/idwinds"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/idclouds"
        android:layout_alignStart="@+id/idclouds"
        android:layout_marginTop="422dp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton"
        android:src="@drawable/arrow_right"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="false" />
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton2"
        android:src="@drawable/arrow_left"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
         />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/tvstate"
        android:id="@+id/idstate"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/idcurrentloc"
        android:layout_toEndOf="@+id/idcurrentloc" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_toEndOf="@+id/imageButton"
        android:layout_below="@+id/idstate"
        android:layout_toRightOf="@+id/imageButton" />

</RelativeLayout>
